--- a/project-final-report.tex
+++ b/project-final-report.tex
@@ -56,7 +56,7 @@ We crafted adversarial examples using different settings on the datasets shown i
     \end{tabular}
     \bottomrule
 \end{center}
-\caption{\label{tab:datasetused} CNN test accuracy with legitimate examples}
+\caption{\label{tab:datasetused} List of Datasets Used}
 \end{table}
 
 
