--- a/project-final-report.tex
+++ b/project-final-report.tex
@@ -1,4 +1,4 @@
-%project-proposal.tex
+%project-final-report.tex
 \documentclass{article}
 \usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage{booktabs}
@@ -51,7 +51,7 @@ We crafted adversarial examples using different settings on the datasets shown i
     MNIST & Original MNIST\cite{mnist} dataset with 10 handwritten digits. (28x28 grey-scaled images) \\ \midrule
     FMNIST & Fashion MNIST\cite{fmnist} is a MNIST-like dataset that consists of 10 types of fashion objects such as skirts and shirts. It consists of a training set of 60000 examples and a test set of 10000 examples. (28$\times$28 grey-scale images) \\ \midrule
     MNISTBG & MNIST with background)\cite{mnistbg} is a patched version of MNIST dataset. Each MNIST example is attached with a background image extracted randomly from a set of 20 images downloaded from the Internet. (28$\times$28 grey-scale images) \\ \midrule
-    N & Cropped street sign numbers with real-life backgrounds\cite{svhn}. (32x32 color images) \\
+    SVHN & Cropped street sign numbers with real-life backgrounds\cite{svhn}. (32x32 color images) \\
     \bottomrule
     \end{tabular}
     \caption{\label{tab:datasetused} List of Datasets Used}
